# alectryon

./: CMakeLists.txt  README.md  main.c
src/: main.c
src/constants/: constants.h  linux_constants.h  os_x_constants.h
src/utilities/: utilities.c  utilities.h
src/utilities/file_manager/: file_manager.c  file_manager.h
src/utilities/motion_detector/: motion_detector.c  motion_detector.h
